maggot/src/y.output
Terminals unused in grammar

    COLON
    DQUOTE
    SQUOTE
    FOR
    IN
    TO
    BREAK
    EXTERN
    AND
    OR
    XOR


State 119 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | func_decl
    6     | proto_decl
    7     | COMMENT

    8 var_decl: type_specifier vars SEMICOLON

    9 vars: vars COMMA var
   10     | var

   11 var: IDENTIFIER
   12    | IDENTIFIER LEFTSB INTEGER_VALUE RIGHTSB
   13    | IDENTIFIER ASSIGN expression

   14 type_specifier: INT
   15               | FLOAT
   16               | BOOL
   17               | VOID
   18               | STRING

   19 func_decl: type_specifier IDENTIFIER LEFTP params RIGHTP compound_stmt

   20 proto_decl: type_specifier IDENTIFIER LEFTP params RIGHTP SEMICOLON

   21 params: param_list
   22       | VOID
   23       | %empty

   24 param_list: param_list COMMA param
   25           | param

   26 param: type_specifier IDENTIFIER

   27 compound_stmt: LEFTB stmt_list RIGHTB

   28 stmt_list: stmt_list stmt
   29          | %empty

   30 stmt: expression_stmt
   31     | compound_stmt
   32     | selection_stmt
   33     | iteration_stmt
   34     | return_stmt
   35     | var_decl
   36     | COMMENT

   37 expression_stmt: expression SEMICOLON
   38                | SEMICOLON

   39 selection_stmt: IF LEFTP expression RIGHTP stmt
   40               | IF LEFTP expression RIGHTP stmt ELSE stmt

   41 iteration_stmt: WHILE LEFTP expression RIGHTP stmt

   42 return_stmt: RETURN SEMICOLON
   43            | RETURN expression SEMICOLON

   44 expression: variable ASSIGN expression
   45           | relation_expr

   46 variable: IDENTIFIER
   47         | IDENTIFIER LEFTSB expression RIGHTSB

   48 relation_expr: relation_expr LE addition
   49              | relation_expr LT addition
   50              | relation_expr GT addition
   51              | relation_expr GE addition
   52              | relation_expr EQ addition
   53              | relation_expr NEQ addition
   54              | addition

   55 addition: addition ADD term
   56         | addition SUB term
   57         | term

   58 term: term MUL factor
   59     | term DIV factor
   60     | factor

   61 factor: LEFTP expression RIGHTP
   62       | SUB factor
   63       | variable
   64       | call
   65       | value

   66 value: INTEGER_VALUE
   67      | FLOAT_VALUE
   68      | STRING_VALUE
   69      | TRUE
   70      | FALSE

   71 call: IDENTIFIER LEFTP args RIGHTP

   72 args: arg_list
   73     | %empty

   74 arg_list: arg_list COMMA expression
   75         | expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COLON (258)
    SEMICOLON (259) 8 20 37 38 42 43
    COMMA (260) 9 24 74
    LEFTP (261) 19 20 39 40 41 61 71
    RIGHTP (262) 19 20 39 40 41 61 71
    LEFTB (263) 27
    RIGHTB (264) 27
    LEFTSB (265) 12 47
    RIGHTSB (266) 12 47
    DQUOTE (267)
    SQUOTE (268)
    RETURN (269) 42 43
    FOR (270)
    IN (271)
    TO (272)
    WHILE (273) 41
    IF (274) 39 40
    ELSE (275) 40
    BREAK (276)
    EXTERN (277)
    IDENTIFIER <str> (278) 11 12 13 19 20 26 46 47 71
    STRING_VALUE <str> (279) 68
    COMMENT <str> (280) 7 36
    INT <valuetext> (281) 14
    FLOAT <valuetext> (282) 15
    BOOL <valuetext> (283) 16
    VOID <valuetext> (284) 17 22
    STRING <valuetext> (285) 18
    INTEGER_VALUE <valuetext> (286) 12 66
    FLOAT_VALUE <valuetext> (287) 67
    FALSE <valuetext> (288) 70
    TRUE <valuetext> (289) 69
    ASSIGN (290) 13 44
    GT <Op> (291) 50
    LT <Op> (292) 49
    EQ <Op> (293) 52
    NEQ <Op> (294) 53
    GE <Op> (295) 51
    LE <Op> (296) 48
    AND (297)
    OR (298)
    XOR (299)
    ADD <Op> (300) 55
    SUB <Op> (301) 56 62
    MUL <Op> (302) 58
    DIV <Op> (303) 59
    UMINUS <Op> (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program (51)
        on left: 1
        on right: 0
    decl_list (52)
        on left: 2 3
        on right: 1 2
    decl <node> (53)
        on left: 4 5 6 7
        on right: 2 3
    var_decl <node> (54)
        on left: 8
        on right: 4 35
    vars <node> (55)
        on left: 9 10
        on right: 8 9
    var <node> (56)
        on left: 11 12 13
        on right: 9 10
    type_specifier <valueType> (57)
        on left: 14 15 16 17 18
        on right: 8 19 20 26
    func_decl <node> (58)
        on left: 19
        on right: 5
    proto_decl <node> (59)
        on left: 20
        on right: 6
    params <node> (60)
        on left: 21 22 23
        on right: 19 20
    param_list <node> (61)
        on left: 24 25
        on right: 21 24
    param <node> (62)
        on left: 26
        on right: 24 25
    compound_stmt <node> (63)
        on left: 27
        on right: 19 31
    stmt_list <node> (64)
        on left: 28 29
        on right: 27 28
    stmt <node> (65)
        on left: 30 31 32 33 34 35 36
        on right: 28 39 40 41
    expression_stmt <node> (66)
        on left: 37 38
        on right: 30
    selection_stmt <node> (67)
        on left: 39 40
        on right: 32
    iteration_stmt <node> (68)
        on left: 41
        on right: 33
    return_stmt <node> (69)
        on left: 42 43
        on right: 34
    expression <node> (70)
        on left: 44 45
        on right: 13 37 39 40 41 43 44 47 61 74 75
    variable <node> (71)
        on left: 46 47
        on right: 44 63
    relation_expr <node> (72)
        on left: 48 49 50 51 52 53 54
        on right: 45 48 49 50 51 52 53
    addition <node> (73)
        on left: 55 56 57
        on right: 48 49 50 51 52 53 54 55 56
    term <node> (74)
        on left: 58 59 60
        on right: 55 56 57 58 59
    factor <node> (75)
        on left: 61 62 63 64 65
        on right: 58 59 60 62
    value <node> (76)
        on left: 66 67 68 69 70
        on right: 65
    call <node> (77)
        on left: 71
        on right: 64
    args <node> (78)
        on left: 72 73
        on right: 71
    arg_list <node> (79)
        on left: 74 75
        on right: 72 74


State 0

    0 $accept: . program $end

    COMMENT  shift, and go to state 1
    INT      shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOL     shift, and go to state 4
    VOID     shift, and go to state 5
    STRING   shift, and go to state 6

    program         go to state 7
    decl_list       go to state 8
    decl            go to state 9
    var_decl        go to state 10
    type_specifier  go to state 11
    func_decl       go to state 12
    proto_decl      go to state 13


State 1

    7 decl: COMMENT .

    $default  reduce using rule 7 (decl)


State 2

   14 type_specifier: INT .

    $default  reduce using rule 14 (type_specifier)


State 3

   15 type_specifier: FLOAT .

    $default  reduce using rule 15 (type_specifier)


State 4

   16 type_specifier: BOOL .

    $default  reduce using rule 16 (type_specifier)


State 5

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 6

   18 type_specifier: STRING .

    $default  reduce using rule 18 (type_specifier)


State 7

    0 $accept: program . $end

    $end  shift, and go to state 14


State 8

    1 program: decl_list .
    2 decl_list: decl_list . decl

    COMMENT  shift, and go to state 1
    INT      shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOL     shift, and go to state 4
    VOID     shift, and go to state 5
    STRING   shift, and go to state 6

    $default  reduce using rule 1 (program)

    decl            go to state 15
    var_decl        go to state 10
    type_specifier  go to state 11
    func_decl       go to state 12
    proto_decl      go to state 13


State 9

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 10

    4 decl: var_decl .

    $default  reduce using rule 4 (decl)


State 11

    8 var_decl: type_specifier . vars SEMICOLON
   19 func_decl: type_specifier . IDENTIFIER LEFTP params RIGHTP compound_stmt
   20 proto_decl: type_specifier . IDENTIFIER LEFTP params RIGHTP SEMICOLON

    IDENTIFIER  shift, and go to state 16

    vars  go to state 17
    var   go to state 18


State 12

    5 decl: func_decl .

    $default  reduce using rule 5 (decl)


State 13

    6 decl: proto_decl .

    $default  reduce using rule 6 (decl)


State 14

    0 $accept: program $end .

    $default  accept


State 15

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 16

   11 var: IDENTIFIER .
   12    | IDENTIFIER . LEFTSB INTEGER_VALUE RIGHTSB
   13    | IDENTIFIER . ASSIGN expression
   19 func_decl: type_specifier IDENTIFIER . LEFTP params RIGHTP compound_stmt
   20 proto_decl: type_specifier IDENTIFIER . LEFTP params RIGHTP SEMICOLON

    LEFTP   shift, and go to state 19
    LEFTSB  shift, and go to state 20
    ASSIGN  shift, and go to state 21

    $default  reduce using rule 11 (var)


State 17

    8 var_decl: type_specifier vars . SEMICOLON
    9 vars: vars . COMMA var

    SEMICOLON  shift, and go to state 22
    COMMA      shift, and go to state 23


State 18

   10 vars: var .

    $default  reduce using rule 10 (vars)


State 19

   19 func_decl: type_specifier IDENTIFIER LEFTP . params RIGHTP compound_stmt
   20 proto_decl: type_specifier IDENTIFIER LEFTP . params RIGHTP SEMICOLON

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    VOID    shift, and go to state 24
    STRING  shift, and go to state 6

    $default  reduce using rule 23 (params)

    type_specifier  go to state 25
    params          go to state 26
    param_list      go to state 27
    param           go to state 28


State 20

   12 var: IDENTIFIER LEFTSB . INTEGER_VALUE RIGHTSB

    INTEGER_VALUE  shift, and go to state 29


State 21

   13 var: IDENTIFIER ASSIGN . expression

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    expression     go to state 38
    variable       go to state 39
    relation_expr  go to state 40
    addition       go to state 41
    term           go to state 42
    factor         go to state 43
    value          go to state 44
    call           go to state 45


State 22

    8 var_decl: type_specifier vars SEMICOLON .

    $default  reduce using rule 8 (var_decl)


State 23

    9 vars: vars COMMA . var

    IDENTIFIER  shift, and go to state 46

    var  go to state 47


State 24

   17 type_specifier: VOID .
   22 params: VOID .

    RIGHTP    reduce using rule 22 (params)
    $default  reduce using rule 17 (type_specifier)


State 25

   26 param: type_specifier . IDENTIFIER

    IDENTIFIER  shift, and go to state 48


State 26

   19 func_decl: type_specifier IDENTIFIER LEFTP params . RIGHTP compound_stmt
   20 proto_decl: type_specifier IDENTIFIER LEFTP params . RIGHTP SEMICOLON

    RIGHTP  shift, and go to state 49


State 27

   21 params: param_list .
   24 param_list: param_list . COMMA param

    COMMA  shift, and go to state 50

    $default  reduce using rule 21 (params)


State 28

   25 param_list: param .

    $default  reduce using rule 25 (param_list)


State 29

   12 var: IDENTIFIER LEFTSB INTEGER_VALUE . RIGHTSB

    RIGHTSB  shift, and go to state 51


State 30

   61 factor: LEFTP . expression RIGHTP

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    expression     go to state 52
    variable       go to state 39
    relation_expr  go to state 40
    addition       go to state 41
    term           go to state 42
    factor         go to state 43
    value          go to state 44
    call           go to state 45


State 31

   46 variable: IDENTIFIER .
   47         | IDENTIFIER . LEFTSB expression RIGHTSB
   71 call: IDENTIFIER . LEFTP args RIGHTP

    LEFTP   shift, and go to state 53
    LEFTSB  shift, and go to state 54

    $default  reduce using rule 46 (variable)


State 32

   68 value: STRING_VALUE .

    $default  reduce using rule 68 (value)


State 33

   66 value: INTEGER_VALUE .

    $default  reduce using rule 66 (value)


State 34

   67 value: FLOAT_VALUE .

    $default  reduce using rule 67 (value)


State 35

   70 value: FALSE .

    $default  reduce using rule 70 (value)


State 36

   69 value: TRUE .

    $default  reduce using rule 69 (value)


State 37

   62 factor: SUB . factor

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    factor    go to state 56
    value     go to state 44
    call      go to state 45


State 38

   13 var: IDENTIFIER ASSIGN expression .

    $default  reduce using rule 13 (var)


State 39

   44 expression: variable . ASSIGN expression
   63 factor: variable .

    ASSIGN  shift, and go to state 57

    $default  reduce using rule 63 (factor)


State 40

   45 expression: relation_expr .
   48 relation_expr: relation_expr . LE addition
   49              | relation_expr . LT addition
   50              | relation_expr . GT addition
   51              | relation_expr . GE addition
   52              | relation_expr . EQ addition
   53              | relation_expr . NEQ addition

    GT   shift, and go to state 58
    LT   shift, and go to state 59
    EQ   shift, and go to state 60
    NEQ  shift, and go to state 61
    GE   shift, and go to state 62
    LE   shift, and go to state 63

    $default  reduce using rule 45 (expression)


State 41

   54 relation_expr: addition .
   55 addition: addition . ADD term
   56         | addition . SUB term

    ADD  shift, and go to state 64
    SUB  shift, and go to state 65

    $default  reduce using rule 54 (relation_expr)


State 42

   57 addition: term .
   58 term: term . MUL factor
   59     | term . DIV factor

    MUL  shift, and go to state 66
    DIV  shift, and go to state 67

    $default  reduce using rule 57 (addition)


State 43

   60 term: factor .

    $default  reduce using rule 60 (term)


State 44

   65 factor: value .

    $default  reduce using rule 65 (factor)


State 45

   64 factor: call .

    $default  reduce using rule 64 (factor)


State 46

   11 var: IDENTIFIER .
   12    | IDENTIFIER . LEFTSB INTEGER_VALUE RIGHTSB
   13    | IDENTIFIER . ASSIGN expression

    LEFTSB  shift, and go to state 20
    ASSIGN  shift, and go to state 21

    $default  reduce using rule 11 (var)


State 47

    9 vars: vars COMMA var .

    $default  reduce using rule 9 (vars)


State 48

   26 param: type_specifier IDENTIFIER .

    $default  reduce using rule 26 (param)


State 49

   19 func_decl: type_specifier IDENTIFIER LEFTP params RIGHTP . compound_stmt
   20 proto_decl: type_specifier IDENTIFIER LEFTP params RIGHTP . SEMICOLON

    SEMICOLON  shift, and go to state 68
    LEFTB      shift, and go to state 69

    compound_stmt  go to state 70


State 50

   24 param_list: param_list COMMA . param

    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    BOOL    shift, and go to state 4
    VOID    shift, and go to state 5
    STRING  shift, and go to state 6

    type_specifier  go to state 25
    param           go to state 71


State 51

   12 var: IDENTIFIER LEFTSB INTEGER_VALUE RIGHTSB .

    $default  reduce using rule 12 (var)


State 52

   61 factor: LEFTP expression . RIGHTP

    RIGHTP  shift, and go to state 72


State 53

   71 call: IDENTIFIER LEFTP . args RIGHTP

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    $default  reduce using rule 73 (args)

    expression     go to state 73
    variable       go to state 39
    relation_expr  go to state 40
    addition       go to state 41
    term           go to state 42
    factor         go to state 43
    value          go to state 44
    call           go to state 45
    args           go to state 74
    arg_list       go to state 75


State 54

   47 variable: IDENTIFIER LEFTSB . expression RIGHTSB

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    expression     go to state 76
    variable       go to state 39
    relation_expr  go to state 40
    addition       go to state 41
    term           go to state 42
    factor         go to state 43
    value          go to state 44
    call           go to state 45


State 55

   63 factor: variable .

    $default  reduce using rule 63 (factor)


State 56

   62 factor: SUB factor .

    $default  reduce using rule 62 (factor)


State 57

   44 expression: variable ASSIGN . expression

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    expression     go to state 77
    variable       go to state 39
    relation_expr  go to state 40
    addition       go to state 41
    term           go to state 42
    factor         go to state 43
    value          go to state 44
    call           go to state 45


State 58

   50 relation_expr: relation_expr GT . addition

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    addition  go to state 78
    term      go to state 42
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 59

   49 relation_expr: relation_expr LT . addition

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    addition  go to state 79
    term      go to state 42
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 60

   52 relation_expr: relation_expr EQ . addition

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    addition  go to state 80
    term      go to state 42
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 61

   53 relation_expr: relation_expr NEQ . addition

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    addition  go to state 81
    term      go to state 42
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 62

   51 relation_expr: relation_expr GE . addition

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    addition  go to state 82
    term      go to state 42
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 63

   48 relation_expr: relation_expr LE . addition

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    addition  go to state 83
    term      go to state 42
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 64

   55 addition: addition ADD . term

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    term      go to state 84
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 65

   56 addition: addition SUB . term

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    term      go to state 85
    factor    go to state 43
    value     go to state 44
    call      go to state 45


State 66

   58 term: term MUL . factor

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    factor    go to state 86
    value     go to state 44
    call      go to state 45


State 67

   59 term: term DIV . factor

    LEFTP          shift, and go to state 30
    IDENTIFIER     shift, and go to state 31
    STRING_VALUE   shift, and go to state 32
    INTEGER_VALUE  shift, and go to state 33
    FLOAT_VALUE    shift, and go to state 34
    FALSE          shift, and go to state 35
    TRUE           shift, and go to state 36
    SUB            shift, and go to state 37

    variable  go to state 55
    factor    go to state 87
    value     go to state 44
    call      go to state 45


State 68

   20 proto_decl: type_specifier IDENTIFIER LEFTP params RIGHTP SEMICOLON .

    $default  reduce using rule 20 (proto_decl)


State 69

   27 compound_stmt: LEFTB . stmt_list RIGHTB

    $default  reduce using rule 29 (stmt_list)

    stmt_list  go to state 88


State 70

   19 func_decl: type_specifier IDENTIFIER LEFTP params RIGHTP compound_stmt .

    $default  reduce using rule 19 (func_decl)


State 71

   24 param_list: param_list COMMA param .

    $default  reduce using rule 24 (param_list)


State 72

   61 factor: LEFTP expression RIGHTP .

    $default  reduce using rule 61 (factor)


State 73

   75 arg_list: expression .

    $default  reduce using rule 75 (arg_list)


State 74

   71 call: IDENTIFIER LEFTP args . RIGHTP

    RIGHTP  shift, and go to state 89


State 75

   72 args: arg_list .
   74 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 90

    $default  reduce using rule 72 (args)


State 76

   47 variable: IDENTIFIER LEFTSB expression . RIGHTSB

    RIGHTSB  shift, and go to state 91


State 77

   44 expression: variable ASSIGN expression .

    $default  reduce using rule 44 (expression)


State 78

   50 relation_expr: relation_expr GT addition .
   55 addition: addition . ADD term
   56         | addition . SUB term
